--- a/AcousticFWI/Acoustic-wave-equation.ipynb
+++ b/AcousticFWI/Acoustic-wave-equation.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -219,7 +219,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127 45 45\n"
+      "52 45 45\n"
      ]
     }
    ],
@@ -504,13 +504,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "grad=  dtt v"
+    "v=np.ones((nx,ny))+.5\n",
+    "v[floor(nx/2):nx,:]=2.5\n",
+    "\n",
+    "def smooth10(v):\n",
+    "    v0=v\n",
+    "    for a in range(2,nx-2):\n",
+    "        v0[a,:]=np.sum(v0[a-2:a+2,:)/5\n",
+    "    return v0\n",
+    "\n",
+    "v0=smooth10(v)"
    ]
   },
   {
@@ -527,10 +536,10 @@
     "        for b in range(1,ny-1):\n",
     "            src = source(xmin+a*hstep,ymin+b*hstep,tstep*ti)\n",
     "            subs={p(x,y,t-s):u[ti-1,a,b],p(x-h,y,t):u[ti,a-1,b], p(x,y,t):u[ti,a,b], p(x+h,y,t):u[ti,a+1,b],\n",
-    "                  p(x,y-h,t):u[ti,a,b-1], p(x,y+h,t):u[ti,a,b+1], q(x,y,t):src , m:sos**-2, s:tstep, h:hstep}\n",
+    "                  p(x,y-h,t):u[ti,a,b-1], p(x,y+h,t):u[ti,a,b+1], q(x,y,t):src , m:v[a,b]**-2, s:tstep, h:hstep}\n",
     "            u[ti+1,a,b]=stencil.evalf(subs=subs)\n",
-    "    for rr in range(0,nx):\n",
-    "        rec[ti+1,rr]=u[ti+1,rr,ny/2]"
+    "            if b-floor(ny/2)<h/2 :\n",
+    "                rec[ti+1,a]=u[ti+1,a,floor(ny/2)] "
    ]
   },
   {
@@ -542,16 +551,16 @@
    "outputs": [],
    "source": [
     "#set source as Ricker wavelet for f0 \n",
-    "\n",
+    "rec0= np.zeros((nt,nx)) # receiver all over x at y=0\n",
     "for ti in range(1,nt-1):\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
     "            src = source(xmin+a*hstep,ymin+b*hstep,tstep*ti)\n",
     "            subs={p(x,y,t-s):u[ti-1,a,b],p(x-h,y,t):u[ti,a-1,b], p(x,y,t):u[ti,a,b], p(x+h,y,t):u[ti,a+1,b],\n",
-    "                  p(x,y-h,t):u[ti,a,b-1], p(x,y+h,t):u[ti,a,b+1], q(x,y,t):src , m:sos**-2, s:tstep, h:hstep}\n",
+    "                  p(x,y-h,t):u[ti,a,b-1], p(x,y+h,t):u[ti,a,b+1], q(x,y,t):src , m:v0[a,b]**-2, s:tstep, h:hstep}\n",
     "            u[ti+1,a,b]=stencil.evalf(subs=subs)\n",
-    "    for rr in range(0,nx):\n",
-    "        rec[ti+1,rr]=u[ti+1,rr,ny/2]"
+    "            if b-floor(ny/2)<h/2 :\n",
+    "                rec0[ti+1,a]=u[ti+1,a,floor(ny/2)] "
    ]
   },
   {
@@ -568,9 +577,11 @@
     "for ti in range(1,nt-1):\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
+    "            if b-floor(ny/2)<h/2 :\n",
+    "                dd=rec0[ti+1,a]-rec[ti+1,a]\n",
     "            src = source(a,b,tstep*ti)\n",
     "            subs={p(x,y,t-s):v[ti-1,a,b],p(x-h,y,t):v[ti,a-1,b], p(x,y,t):v[ti,a,b], p(x+h,y,t):v[ti,a+1,b],\n",
-    "                  p(x,y-h,t):v[ti,a,b-1], p(x,y+h,t):v[ti,a,b+1], dd(x,y,t):u[ti,a,b] , m:sos**-2, s:tstep, h:hstep}\n",
+    "                  p(x,y-h,t):v[ti,a,b-1], p(x,y+h,t):v[ti,a,b+1], dd(x,y,t):dd , m:v0[a,b]**-2, s:tstep, h:hstep}\n",
     "            u[ti+1,a,b]=stencil.evalf(subs=subs)\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
