--- a/AcousticFWI/Acoustic-wave-equation.ipynb
+++ b/AcousticFWI/Acoustic-wave-equation.ipynb
@@ -314,7 +314,7 @@
     "            subs={p(x,y,t-s):u[ti-1,a,b],p(x-h,y,t):u[ti,a-1,b], p(x,y,t):u[ti,a,b], p(x+h,y,t):u[ti,a+1,b],\n",
     "                  p(x,y-h,t):u[ti,a,b-1], p(x,y+h,t):u[ti,a,b+1], q:src , m:sos**-2, s:tstep, h:hstep}\n",
     "            u[ti+1,a,b]=stencil.evalf(subs=subs)\n",
-    "            if b-floor(ny/2)<h/2 :\n",
+    "            if b-floor(ny/2)<hstep/2 :\n",
     "                rec[ti+1,a]=u[ti+1,a,floor(ny/2)] "
    ]
   },
@@ -538,7 +538,7 @@
     "            subs={p(x,y,t-s):u[ti-1,a,b],p(x-h,y,t):u[ti,a-1,b], p(x,y,t):u[ti,a,b], p(x+h,y,t):u[ti,a+1,b],\n",
     "                  p(x,y-h,t):u[ti,a,b-1], p(x,y+h,t):u[ti,a,b+1], q(x,y,t):src , m:v[a,b]**-2, s:tstep, h:hstep}\n",
     "            u[ti+1,a,b]=stencil.evalf(subs=subs)\n",
-    "            if b-floor(ny/2)<h/2 :\n",
+    "            if b-floor(ny/2)<hstep/2 :\n",
     "                rec[ti+1,a]=u[ti+1,a,floor(ny/2)] "
    ]
   },
@@ -559,7 +559,7 @@
     "            subs={p(x,y,t-s):u[ti-1,a,b],p(x-h,y,t):u[ti,a-1,b], p(x,y,t):u[ti,a,b], p(x+h,y,t):u[ti,a+1,b],\n",
     "                  p(x,y-h,t):u[ti,a,b-1], p(x,y+h,t):u[ti,a,b+1], q(x,y,t):src , m:v0[a,b]**-2, s:tstep, h:hstep}\n",
     "            u[ti+1,a,b]=stencil.evalf(subs=subs)\n",
-    "            if b-floor(ny/2)<h/2 :\n",
+    "            if b-floor(ny/2)<hstep/2 :\n",
     "                rec0[ti+1,a]=u[ti+1,a,floor(ny/2)] "
    ]
   },
@@ -577,7 +577,7 @@
     "for ti in range(1,nt-1):\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
-    "            if b-floor(ny/2)<h/2 :\n",
+    "            if b-floor(ny/2)<hstep/2 :\n",
     "                dd=rec0[ti+1,a]-rec[ti+1,a]\n",
     "            src = source(a,b,tstep*ti)\n",
     "            subs={p(x,y,t-s):v[ti-1,a,b],p(x-h,y,t):v[ti,a-1,b], p(x,y,t):v[ti,a,b], p(x+h,y,t):v[ti,a+1,b],\n",
