--- a/AcousticFWI/Analytical.ipynb
+++ b/AcousticFWI/Analytical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -16,41 +16,54 @@
     "# Analytical solution for the constant medium acoustic wave equation\n",
     "# Given for a nx by ny domain of velocity v on a h grid with source at position xsrc,ysrc , 2second propagation at dt=1ms\n",
     "\n",
-    "T=2.0\n",
-    "dt=.001\n",
-    "df=1.0/T\n",
-    "maxf=1.0/dt\n",
+    "\n",
+    "\n",
+    "T=.4\n",
+    "dt=.01\n",
     "nt=floor(T/dt+1)\n",
-    "\n",
+    "nf = floor(nt/2+1)\n",
+    "f0=15\n",
     "tt=np.linspace(0,T,nt)\n",
-    "ff=rfft(tt)\n",
-    "tt,ff\n",
+    "fnyq=1. / (2*(dt))\n",
+    "df=2*fnyq/nt\n",
+    "faxis=df*np.arange(nf)\n",
     "\n",
-    "fig2 = plt.figure()\n",
-    "plt.hold(\"off\")\n",
-    "shotrec = plt.plot(ff,ff)   # this is how you'd plot a single line...\n",
-    "plt.show()"
+    "# Ricker wavelet in frew domain\n",
+    "R=np.zeros((nf))\n",
+    "for ff in range(0,nf-1):\n",
+    "    R[ff]=2/sqrt(pi)*faxis[ff]**3/f0**3*exp(-faxis[ff]**2/f0**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analytical expression\n",
+    "\\begin{eqnarray}\n",
+    "u_s(\\rho, \\phi, t) = \\frac{1}{2\\pi} \\int_{-\\infty}^{\\infty} \\{ -i \\pi H_0^{(2)}\\left(k | \\sigma - \\sigma_s| \\right) F(\\omega) e^{i\\omega t} d\\omega\\}\n",
+    "\\end{eqnarray}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Ricker wavelet time domain\n",
+    "def ricker(f, length=0.512, dt=0.001):\n",
+    "    t = np.linspace(-length/2, (length-dt)/2, length/dt)\n",
+    "    y = (1.0 - 2.0*(np.pi**2)*(f**2)*(t**2)) * np.exp(-(np.pi**2)*(f**2)*(t**2))\n",
+    "    return t, y\n",
+    " \n",
+    "f = 5 # A low wavelength of 5 Hz\n",
+    "t, y = ricker(f)\n",
+    " \n",
+    "plt.plot(t, y)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -60,21 +73,55 @@
    },
    "outputs": [],
    "source": [
-    "nx=200\n",
-    "ny=200\n",
-    "h=1\n",
-    "xsrc=100 # in grid points\n",
-    "ysrc=100 # in grid points\n",
-    "v=1\n",
+    "nx=100\n",
+    "ny=100\n",
+    "h=5\n",
+    "xsrc=50\n",
+    "ysrc=50\n",
+    "v=1000\n",
     "\n",
-    "U_a=np.zeros((nx,ny,nf))\n",
-    "for a in range(0,nf):\n",
-    "    k = 2*np.pi*f[a]/v\n",
     "\n",
+    "U_a=np.zeros((nx,ny,nf),dtype=complex)\n",
+    "for a in range(0,nf-1):\n",
+    "    k = 2*np.pi*faxis[a]/v\n",
     "    for m in range(0,nx):\n",
     "        for n in range(0,ny):\n",
-    "            tmp = k*sqrt((h*(m - xsrc))**2 + h*(n - ysrc)**2)\n",
-    "            U_a[m,n,a] = 1j* hankel1(0,tmp)/4.0;"
+    "            tmp = k*np.sqrt((h*(m - xsrc))**2 + (h*(n - ysrc))**2)\n",
+    "            U_a[m,n,a] = -1j*np.pi* hankel2(0,tmp)*R[a]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Do inverse fft on 0:dt:T (third dimension on U) and you have analytical solution o\n",
+    "U_t=np.zeros((nx,ny,nf))\n",
+    "for m in range(0,nx):\n",
+    "     for n in range(0,ny):\n",
+    "        U_t[m,n,:]=np.real(np.fft.ifft(U_a[m,n,:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from matplotlib import animation\n",
+    "fig = plt.figure()\n",
+    "plts = []             # get ready to populate this list the Line artists to be plotted\n",
+    "plt.hold(\"off\")\n",
+    "for i in range(1,nf):\n",
+    "    r = plt.imshow(U_t[:,:,nf-i])   # this is how you'd plot a single line...\n",
+    "    plts.append( [r] )  \n",
+    "ani = animation.ArtistAnimation(fig, plts, interval=50,  repeat = False)   # run the animation\n",
+    "plt.show()"
    ]
   },
   {
@@ -84,9 +131,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Do inverse fft on 0:.001:2 (third dimension on U) and you have analytical solution o"
-   ]
+   "source": []
   }
  ],
  "metadata": {
