Indexing fixed (I think

--- a/AcousticFWI/Acoustic-wave-equation.ipynb
+++ b/AcousticFWI/Acoustic-wave-equation.ipynb
@@ -277,7 +277,7 @@
     "            subs={p(x,y,t-s):u[ti-1,a,b],p(x-h,y,t):u[ti,a-1,b], p(x,y,t):u[ti,a,b], p(x+h,y,t):u[ti,a+1,b],\n",
     "                  p(x,y-h,t):u[ti,a,b-1], p(x,y+h,t):u[ti,a,b+1], q:src , m:sos**-2, s:tstep, h:hstep}\n",
     "            u[ti+1,a,b]=stencil.evalf(subs=subs)\n",
-    "            if b-floor(ny/2)<hstep/2 :\n",
+    "            if np.absolute(b-floor(ny/2))<hstep/2 :\n",
     "                rec[ti+1,a]=u[ti+1,a,floor(ny/2)] "
    ]
   },
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -404,7 +404,7 @@
        "y)                                                                          ⎠"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -444,10 +444,10 @@
    "source": [
     "srca= np.zeros((nt)) # receiver all over x at y=0\n",
     "v = np.zeros((nt,nx,ny))\n",
-    "for ti in range(1,nt-1):\n",
+    "for ti in range(1,nt):\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
-    "            if (b-floor(ny/2))<0.001:\n",
+    "            if np.absolute(b-floor(ny/2))<hstep/2:\n",
     "                resid=rec[nt-ti,a]\n",
     "            else:\n",
     "                resid=0\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
