--- a/AcousticFWI/Analytical.ipynb
+++ b/AcousticFWI/Analytical.ipynb
@@ -2,36 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from sympy import *\n",
     "from scipy.fftpack import rfft\n",
+    "from scipy.special import hankel2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "init_printing()\n",
     "# Analytical solution for the constant medium acoustic wave equation\n",
     "# Given for a nx by ny domain of velocity v on a h grid with source at position xsrc,ysrc , 2second propagation at dt=1ms\n",
     "\n",
     "\n",
     "\n",
-    "T=.4\n",
-    "dt=.01\n",
-    "nt=floor(T/dt+1)\n",
-    "nf = floor(nt/2+1)\n",
-    "f0=15\n",
-    "tt=np.linspace(0,T,nt)\n",
-    "fnyq=1. / (2*(dt))\n",
-    "df=2*fnyq/nt\n",
-    "faxis=df*np.arange(nf)\n",
+    "T = .4\n",
+    "dt = .01\n",
+    "nt = int(T/dt+1)\n",
+    "nf = int(nt/2+1)\n",
+    "f0 = 15\n",
+    "tt = np.linspace(0,T,nt)\n",
+    "fnyq = 1. / (2*(dt))\n",
+    "df = 2*fnyq/nt\n",
+    "faxis = df*np.arange(nf)\n",
     "\n",
     "# Ricker wavelet in frew domain\n",
     "R=np.zeros((nf))\n",
     "for ff in range(0,nf-1):\n",
-    "    R[ff]=2/sqrt(pi)*faxis[ff]**3/f0**3*exp(-faxis[ff]**2/f0**2)"
+    "    R[ff]=2/np.sqrt(np.pi)*faxis[ff]**3/f0**3*np.exp(-faxis[ff]**2/f0**2)"
    ]
   },
   {
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +81,7 @@
     "\n",
     "\n",
     "U_a=np.zeros((nx,ny,nf),dtype=complex)\n",
-    "for a in range(0,nf-1):\n",
+    "for a in range(1,nf-1):\n",
     "    k = 2*np.pi*faxis[a]/v\n",
     "    for m in range(0,nx):\n",
     "        for n in range(0,ny):\n",
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -132,25 +131,34 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
