--- a/AcousticFWI/Acoustic-wave-equation.ipynb
+++ b/AcousticFWI/Acoustic-wave-equation.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52 45 45\n"
+      "127 85 85\n"
      ]
     }
    ],
@@ -200,11 +200,11 @@
     "hstep=0.025 #space increment d  = minv/(10*f0);\n",
     "tstep=0.004 #time increment dt = .5 * hstep /maxv;\n",
     "tmin=0.0 #initial time\n",
-    "tmax=.2 #simulate until\n",
-    "xmin=-.5 - 2*hstep #left bound\n",
-    "xmax=.5 + 2*hstep #right bound...assume packet never reaches boundary\n",
-    "ymin=-.5 - 2*hstep #left bound\n",
-    "ymax=.5 + 2*hstep #right bound...assume packet never reaches boundary\n",
+    "tmax=.5 #simulate until\n",
+    "xmin=-1.0 - 2*hstep #left bound\n",
+    "xmax=1.0 + 2*hstep #right bound...assume packet never reaches boundary\n",
+    "ymin=-1.0 - 2*hstep #left bound\n",
+    "ymax=1.0 + 2*hstep #right bound...assume packet never reaches boundary\n",
     "sos=3.0 #speed of sound\n",
     "f0=10\n",
     "t0=1/10\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -241,18 +241,23 @@
     "#plts = []             # get ready to populate this list the Line artists to be plotted\n",
     "#plt.hold(\"off\")\n",
     "\n",
-    "for ti in range(1,nt-1):\n",
+    "for ti in range(0,nt):\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
     "            src = source(xmin+a*hstep,ymin+b*hstep,tstep*ti)\n",
-    "            u[ti+1,a,b]=ts(u[ti-1,a,b],u[ti,a-1,b],u[ti,a,b],u[ti,a+1,b],u[ti,a,b-1],u[ti,a,b+1],src,sos**-2,tstep,hstep)\n",
+    "            if ti==0:\n",
+    "                u[ti,a,b]=ts(0,0,0,0,0,0,src,sos**-2,tstep,hstep)\n",
+    "            elif ti==1:\n",
+    "                u[ti,a,b]=ts(0,u[ti-1,a-1,b],u[ti-1,a,b],u[ti-1,a+1,b],u[ti-1,a,b-1],u[ti-1,a,b+1],src,sos**-2,tstep,hstep)\n",
+    "            else:\n",
+    "                u[ti,a,b]=ts(u[ti-2,a,b],u[ti-1,a-1,b],u[ti-1,a,b],u[ti-1,a+1,b],u[ti-1,a,b-1],u[ti-1,a,b+1],src,sos**-2,tstep,hstep)\n",
     "            if np.absolute(b-floor(ny/2))<hstep/2 :\n",
-    "                rec[ti+1,a]=u[ti+1,a,floor(ny/2)] "
+    "                rec[ti,a]=u[ti,a,b] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +266,7 @@
     "fig = plt.figure()\n",
     "plts = []             # get ready to populate this list the Line artists to be plotted\n",
     "plt.hold(\"off\")\n",
-    "for i in range(nt-1):\n",
+    "for i in range(nt):\n",
     "    r = plt.imshow(u[i,:,:])   # this is how you'd plot a single line...\n",
     "    plts.append( [r] )  \n",
     "ani = animation.ArtistAnimation(fig, plts, interval=50,  repeat = False)   # run the animation\n",
@@ -270,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -284,11 +289,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAALkAAAAPBAMAAABKEHMHAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAzRAiu5mrdu/dZoky\nVEQKohj3AAADCElEQVQ4Ea2TPWhTURTHf31Jk/QlTUJBBFH7BKsWh0RxUBwMKuKiRPxAaKlBEFSU\nxqFWdKm6qFgRFMFBfAh+gEOiGKrG4bkI0qFZXHRIHESc2savtlLjufc+aVpXD7zLeff/cc897zyg\nAxVWz4AH0ZFXBPZv97AGSzXeHimXi6w+10fsVk+5zObyLmEqjkG6RvYq6cLoGun1BbChrtGWinUD\nazl7WEX0N61wkkKj0ciRJVSxJfsRyFJ1DUcj1hU2phday/syutNaACsPGPdH8ISWIts5DJd4D+uQ\nykK0uwSSreKSC8+SuG44GgkNEcr8624PETUCwcLGfQdUnYIq5TL0e8+gmyK8IprBuh6Vhnjxa6SS\naI5GEkmiRjzviGCO9roWzLn/gPHKTkXrdMR9fCsvJY/niX9zoq6kn+VRndEcjaQyhH+r3fmRyBGf\nlS0tMLVb38U9Pzk6UFPUu06o8diVJChP/4w6h4xaFoHPESQitc9gjQyoG89FKkv8p7xm1JZxD/yC\nsaeTLsOyFZeXQ5OOZMq3tdEhq6o/9iKL5XMEiU7Q8pMv6YD0qSm2FImJgb7wPPeGw0EH2jLYvZ3X\nZEwnRHX/9VQNUlr/3LMMRyOL+TATGKbL09jfxXc3Ar8zctp4fhoKNdgHD7CnHMJJsHMULsApLY5c\nwHAUgj04Ohu6MnhPQStuq1gqWaqoO2ME/sxI36uV8+LuEs6B+I1V1CWIOMTkI92EQJrgLIajEIlQ\nXb7hgkhkaTcCAXx3URccmQep/R2B9dKSkEtKpOqGx7FkphJ1gjNqZoSjEImWXKKok6ZF9bWuBbLp\nu59BftOq9J1YlnD6osxLmrGs1J6GbcTkbpEMbV8NRyP2RcbSEXHPN3mL4RCtSS3w3eUnaatYVwkW\nrWE2lUvH+OjwUHol7vEO7Dzt4m67VPOGo5Fwh7VEfZouOb857rDG0wKZt6PTx2nLydie9qB0wKOz\n0ZgmdqRUg40VUb3p6ZOeq0n9tH+3rIpjkNK+GgycdWWzOdYOnvAFzbv/P/8Dc8MLREAPZoMAAAAA\nSUVORK5CYII=\n",
+      "text/latex": [
+       "$$1.06287873679e-07$$"
+      ],
+      "text/plain": [
+       "1.06287873679e-07"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#COmpare with analytical solution, have an expression for Helmholtz, trickier for time domain"
    ]
@@ -328,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -361,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -369,20 +389,26 @@
    "source": [
     "srca= np.zeros((nt)) # receiver all over x at y=0\n",
     "v = np.zeros((nt,nx,ny))\n",
-    "for ti in range(1,nt-1):\n",
+    "for ti in range(0,nt):\n",
     "    for a in range(1,nx-1):\n",
     "        for b in range(1,ny-1):\n",
     "            if np.absolute(b-floor(ny/2))<hstep/2:\n",
-    "                resid=rec[nt-ti,a]\n",
+    "                resid=rec[nt-ti-1,a]\n",
     "            else:\n",
     "                resid=0\n",
-    "            v[ti+1,a,b]=ts(v[ti-1,a,b],v[ti,a-1,b],v[ti,a,b],v[ti,a+1,b],v[ti,a,b-1],v[ti,a,b+1],src,sos**-2,tstep,hstep)\n",
-    "    srca[ti+1]=v[ti+1,floor(nx/2),floor(ny/2)]"
+    "            if ti==0:\n",
+    "                 v[ti,a,b]=ts(0,0,0,0,0,0,resid,sos**-2,tstep,hstep)\n",
+    "            elif ti==1:\n",
+    "                 v[ti,a,b]=ts(0,v[ti-1,a-1,b],v[ti-1,a,b],v[ti-1,a+1,b],v[ti-1,a,b-1],v[ti-1,a,b+1],resid,sos**-2,tstep,hstep)\n",
+    "            else:\n",
+    "                v[ti,a,b]=ts(v[ti-2,a,b],v[ti-1,a-1,b],v[ti-1,a,b],v[ti-1,a+1,b],v[ti-1,a,b-1],v[ti-1,a,b+1],resid,sos**-2,tstep,hstep)\n",
+    "            if abs(xmin+a*hstep-xsrc)<hstep/2 and abs(ymin+b*hstep-ysrc)<hstep/2:\n",
+    "                srca[ti]=v[ti,a,b]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -391,8 +417,8 @@
     "fig = plt.figure()\n",
     "plts = []             # get ready to populate this list the Line artists to be plotted\n",
     "plt.hold(\"off\")\n",
-    "for i in range(1,nt-1):\n",
-    "    r = plt.imshow(v[nt-i,:,:])   # this is how you'd plot a single line...\n",
+    "for i in range(0,nt):\n",
+    "    r = plt.imshow(v[i,:,:])   # this is how you'd plot a single line...\n",
     "    plts.append( [r] )  \n",
     "ani = animation.ArtistAnimation(fig, plts, interval=50,  repeat = False)   # run the animation\n",
     "plt.show()"
@@ -400,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -414,20 +440,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAq8AAAAVBAMAAACagRqUAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAMmYiu80QdonvRN2Z\nVKvu110NAAAGQElEQVRYCe1YX4hUVRj/zZ2ZO/9n9iXwQfKWlAmRAxokCU4ZElHt6MPqQ7WXyGpx\naadCV0F0MGM3WtxVK9Ao5yUiDHagHoLSRrIQWWzqqYdgJ4lCKtfWnPXfOn3fd+6dPXMnQdG9bNR5\nOOc753fO9/v9vr177t0F/m+zVIGANUuJ/8Np72Dvy4AHBp+QKvAYOHJ8cBC9A1/xSqAC8/i2LIJj\nj3TQdHBLB9bZ80s6MrirStO21jtwFHhhy4k2wE8uhG3hF84Vxx5qOmVf/UMlR6GYFa1ktoMdUydw\nm3roWTxol8zldJqr1YVgBeMWRTIajUbjqrkXy7O0ksihxwruw0uIXgI2lJJ5HGxMEdBEViA1yXNv\nexobs6gg7a26n1wIdtqsSzjNGoZLLjv5SgJ/QBQqs6I1XDU/gXQK9rpCS5ZWdFld5nIaeSBSRGQa\nmTKtypikgtbSI0jnaGVrDqeBn/ELsB9Yj1AO63+lDTPIjiou89zTjBFE8ykLQWJoaX5ymY9P2Ewu\nnGkbsRGXnXx9D9wPUShmldbFwOuQTuAW5TJpydICP3dSFVZOYwsQyyJ+AH1cABmjQLQjk0eU9gXv\nyuE8MGy/C0x0GOc4U427GeSjkkk72lqohlQ9moNZ9kB+cgE7bKYXzlgZ6T8ddva1C9gIUShmldYn\ngXFbOoE92mmqZ/GgEVVYOY0e4JDgchVQJOOH6MshQr/70XDO/IvklbptKmxohLfWuJtB8M9XQaaG\n+HT8LztqyfaWzkcuVVhiH7fCdSqsRKIeo6uxE6JQzCqtV4HRqnQCt8iWiZ7FgzqFldN0nWBI8Kec\nXTLmEKMnlq7OheEc3qYn1iL0SzuzZoDeRacW0VtJR8IVwBygN5ze+iqIT2Ficqe+6MQ+cjULK5wJ\nfqY4Yl/pxj0W/R6SQmWWI/MKFXYzdwUFt/miw80sFOtNFVZSFBCt4GECA29WZIsa6SmLnkV4CmaB\nBAwD3QX6dbqAvrWIVbEaK0s6Mu8LOnooGyxKBrdbWUTgApKNLnehOfrJ5VwFrr9REsVOxRe+PW9D\nFCqzrDV4AVjwGndFBbf5IhtulqYjJ1CFlRRFGHkclvU3OhTMYx+F6/DDJKKgwoYLKX5iEzn01ZF8\nh7BQuQWJ7kHwPfQ6CVQaqMLee9vFkrOgDT5y7bAdXuH8lCcUiS/jaPcBQBSKWY60wgrc7osSuFmc\nzM2hpbCpMig7tRhXzBk30Wj0z5vGd1xYLHp5uAocA385GHTxInmuBcF+O723/24CsOFzbmso6ivS\nVWDUsMTJy6jbfORqFpY5kzlWQJH4ug/GRVspZLMSmfSwjm7mriBwuy8ti2vHHZ2rQE4jcJYLG8wi\nNE24M8qPBOm6WZTC0kVkI1IjSXkYk2m6fS9pyFKgs0qvKk/LVJCajtkIcF69+cnlfhU4nNsdh0o9\nVXpB1VWYrqvoCr3mqtIJ3O4LcLPopiRWhYWc5sLSVZCpI8Rf+Wo06b1GLVxLnTkz8X6BwmeAH6nq\n9FVgXKLqJusa0rDRaWWKfEJvdHMYdb5TTumrFPvJ5RZWcaYqWCqRqN98FkhbrsJwTUX0TC2xuXte\n4HZfaGbx+KKv5bosSQrEy/zyiuWQ4G9UNQao5sY+LMiqlcXZwDkEKohkU3THjiTpus1ryFv0vZCN\nFYECLc60yAiSefpExqqZNYn85HILqzjnA69q7PvoZZEVhWJWad0KfA3pFFz0+oKepdWaU1g5zS+v\n3VRGC+MF+s6XESkqbKTLXMvHMjlssjdYeHBw6DfgUfRU6Y/CxVxyF7kTqSlE8ujlRa0dRk9HvAsG\n59Wbn1xSWNdX8LPBk2XlUNR/YGMRRKGYlQiJqrlHdQK3+5rJ4vGlnlj6O0tSIFmRPxA+HnsMOALI\nSK9CYOhYifpo51Urylh3o3GZpmM/ASt2f6Mj8THeue0Vixb19mI/7b39+An+ANbXFYdPXCcPHrFc\nX2H6H0hZsYuvwO9DJUehmBWt5sB2+v8Ldwpu86Vl8fhKnr58ComaOo1wCQnPo9ZShVsxic82gSZy\nznAtp3ugogmbjdCYjaTXyDlnuAZI4KpriLxVy8/eqkTXkWeucJl5ErvsOgTfzBbrZg7f4Nm5whXi\n6y/op5obLNS/dftC4G+HbWaDCOQuHwAAAABJRU5ErkJggg==\n",
+      "text/latex": [
+       "$$\\left ( 3.37949265493e-08, \\quad 3.37949265493e-08, \\quad 1.32348898008e-23, \\quad 1.0\\right )$$"
+      ],
+      "text/plain": [
+       "(3.37949265493e-08, 3.37949265493e-08, 1.32348898008e-23, 1.0)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Actual adjoint test\n",
     "term1=0\n",
-    "for ti in range(1,nt-1):\n",
-    "    term1=term1+srca[ti]*source(0.0,0.0,ti*tstep)\n",
+    "for ti in range(0,nt):\n",
+    "    term1=term1+srca[ti]*source(0.0,0.0,(nt-ti-1)*tstep)\n",
     "\n",
-    "term2=LA.norm(rec,ord=2)**2\n",
+    "term2=LA.norm(rec)**2\n",
     "\n",
-    "term1,term2,term1-term2,srca[20]"
+    "term1,term2,term1-term2,term1/term2"
    ]
   },
   {
